# BirthdayGiftList

./: .dockerignore  .eslintrc  .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
app/: layout.tsx  page.tsx
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/v1/: auth.py  gifts.py  router.py
backend/app/core/: exceptions.py  logging.py  middleware.py  security.py
backend/app/models/: __init__.py  gift.py  user.py
backend/app/schemas/: gift.py  user.py
backend/app/services/: auth.py
src/: App.vue  style.css
src/components/ui/: ToastContainer.vue
src/components/ui/table/: Table.vue  TableCell.vue  TableHead.vue  TableRow.vue
src/composables/: useAuth.ts  useToast.ts  useVisitor.ts
src/pages/: DashboardPage.vue  HomePage.vue  ListPage.vue  NotFoundPage.vue  OAuthCallbackPage.vue
src/router/: index.ts
src/services/: api.ts
